--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "template",
   "main": "index.js",
   "dependencies": {
+    "countup.js": "^2.0.7",
     "cross-env": "^7.0.3",
     "sass": "^1.30.0",
-    "vue": "^2.6.12"
+    "vue": "^2.6.12",
+    "vue-countup-v2": "^4.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.0.2",
