--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cross-env": "^7.0.3",
     "sass": "^1.30.0",
     "vue": "^2.6.12",
+    "vue-aos": "^1.1.0",
     "vue-countup-v2": "^4.0.0"
   },
   "devDependencies": {
