--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "template",
   "main": "index.js",
   "dependencies": {
+    "aos": "^2.3.4",
     "countup.js": "^2.0.7",
     "cross-env": "^7.0.3",
     "sass": "^1.30.0",
@@ -17,7 +18,7 @@
     "laravel-mix": "^5.0.0",
     "postcss": "^7.0.0",
     "postcss-import": "^13.0.0",
-    "resolve-url-loader": "^3.1.0",
+    "resolve-url-loader": "^3.1.2",
     "sass-loader": "^8.0.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue-template-compiler": "^2.6.12"
