--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "aos": "^2.3.4",
     "countup.js": "^2.0.7",
     "cross-env": "^7.0.3",
+    "gsap": "^3.5.1",
     "sass": "^1.30.0",
+    "scrollmagic": "^2.0.8",
     "vue": "^2.6.12",
     "vue-aos": "^1.1.0",
     "vue-countup-v2": "^4.0.0"
