--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "scrollmagic": "^2.0.8",
     "vue": "^2.6.12",
     "vue-aos": "^1.1.0",
-    "vue-countup-v2": "^4.0.0"
+    "vue-countup-v2": "^4.0.0",
+    "vuesax": "^4.0.1-alpha.25"
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.0.2",
