--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "template",
   "main": "index.js",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "aos": "^2.3.4",
     "countup.js": "^2.0.7",
     "cross-env": "^7.0.3",
